feat: add broadcast list API, correctly calc notifications overview and remove seen state from notification
